...

      <View style={styles.header} pointerEvents="box-none">
        <View style={styles.titleContainer} pointerEvents="box-none">
          {/* <TouchableOpacity
            onPress={handleLogoPress}
            activeOpacity={0.7}
            testID="AppLogo"
          > */}
          <Image
            source={require("../../assets/oasisLogo.png")}
            style={styles.logo}
            resizeMode="contain"
          />
...
